feat(conversation): STT: Redis로 Q/A 누적(안전 JSON 파싱) → 종료 시 stt_text 단건 저장